envoy-gateway-mtls/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway
spec:
  gatewayClassName: eg
  listeners:
    - name: sample-app
      protocol: HTTPS
      port: 443
      hostname: mtls.test.local
      tls:
        mode: Terminate
        certificateRefs:
          - name: sample-app-server-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
